Fix agent image size layout issue when adding large image

--- a/admin/css/wpmessagebutton-admin.css
+++ b/admin/css/wpmessagebutton-admin.css
@@ -38,6 +38,7 @@
 }
 
 #agents .agent__photo img {
+	max-width: 100%;
 	display: inline-block;
 	border-radius: 100%;
 }
